[package]
name = "junstr"
version = "0.1.0"
edition = "2024"
description = "Unnest json serialized as strings inside json"
authors = ["gahag <gabriel.s.b@live.com>"]
homepage = "https://github.com/gahag/junstr"
repository = "https://github.com/gahag/junstr"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "error", "display", "debug"] }
serde = "1.0.228"
serde_json = "1.0.145"

[profile.release]
lto = true
